# moser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.xml  fuu.msr  moser-config.cmake.in  moser.manifest  package.cmake  vcpkg-configuration.json  vcpkg.json  win_preqs.txt
doc/: build_linux.md  build_win.md  builtin_objects.md  native_decl.md  native_lib.md
include/: chunk.h  common.h  compiler.h  debug.h  ex.h  foreign.h  gc.h  lib.h  must.h  native.h  object.h  op.h  parser.h  scanner.h  serialize.h  value.h  vm.h
include/win32/: async.h  comobj.h  disp.h  dlopen.h  tinfo.h  uni.h  winrtdelegate.h  winrtmarshal.h  xaml.h
lib/: promise.lib
lib/linux/: SDL.lib  gtk3ui.lib  soup.lib  stdin.lib
lib/win/: SDL.lib  stdin.lib  stdio.lib  wincrypt.lib  windows.lib  winrt.lib  xaml.lib
linux/: fizzbuzz.msr  sdl.msr
linux/curl/: curl.msr
linux/diff/: diff.html  diff.ui  girdef  girf  glade.sh  mtkdirtree.lib  mtkwebview.lib  ui.msr
linux/dot/: dot.html  dot.ui  test.dot  ui.msr
linux/eve/: echo.msr  timeout.msr
linux/gir/: eval.xml  ui.msr
linux/gtk/: builder.msr  builder.xml  gtk.lib  gtk_simple.msr  hexdump.msr  md5.msr  ui.msr  ui.xml
linux/gtk3/: builder.msr  gtk_simple.msr  hash.msr  hexdump.msr  md5.msr
linux/gtk4/: builder.msr  builder.ui  gtk_simple.msr  md5.msr
linux/openssl/: os.msr
linux/soup/: coro_async.msr  coro_soup.msr  gir_coro_soup.msr  gir_coro_soup2.msr  promisify.msr  soup_async.msr
linux/test/: dyn_native.msr  stat.msr  stdio.msr
src/: chunk.cpp  common.cpp  compiler.cpp  debug.cpp  foreign.cpp  gc.cpp  lib.cpp  main.cpp  must.cpp  native.cpp  object.cpp  parser.cpp  scanner.cpp  serialize.cpp  value.cpp  vm.cpp
src/win32/: App.idl  App.xaml.cpp  MoserX.cpp  RCa12740  comobj.cpp  disp.cpp  dlopen.cpp  tinfo.cpp  uni.cpp  xmoser.cpp  xmoser.manifest  xmoser.rc
test/: arrays.msr  closure.msr  decorator.msr  getter_setter.msr  invoke.msr  io_self.msr  isa.msr  join.msr  maps.msr  meta_class.msr  meta_fun.msr  meta_method.msr  module  modules.msr  private.msr  promise.msr  proxy.msr  regex.msr  split.msr  test  try.msr  try_break.msr  try_continue.msr  unexpected_character.msr
test/assignment/: prefix_operator.msr  undefined.msr
test/bool/: equality.msr
test/call/: bool.msr  nil.msr  num.msr  object.msr  string.msr
test/class/: inherit_self.msr  local_inherit_self.msr
test/comments/: multi.mox
test/constructor/: arguments.msr  call_init_early_return.msr  call_init_explicitly.msr  default_arguments.msr  early_return.msr  extra_arguments.msr  init_not_method.msr  missing_arguments.msr  return_in_nested_function.msr  return_value.msr
test/field/: call_nonfunction_field.msr  get_on_bool.msr  get_on_class.msr  get_on_function.msr  get_on_nil.msr  get_on_num.msr  get_on_string.msr  method_binds_this.msr  set_evaluation_order.msr  set_on_bool.msr  set_on_class.msr  set_on_function.msr  set_on_nil.msr  set_on_num.msr  set_on_string.msr
test/for/: fun_in_body.msr  statement_condition.msr  statement_increment.msr  statement_initializer.msr
test/function/: body_must_be_block.msr  extra_arguments.msr  local_mutual_recursion.msr  missing_arguments.msr  missing_comma_in_parameters.msr  print.msr  too_many_arguments.msr  too_many_parameters.msr
test/if/: fun_in_else.msr  fun_in_then.msr  truth.msr  var_in_else.msr
test/inheritance/: constructor.msr  inherit_from_function.msr  inherit_from_nil.msr  inherit_from_number.msr  parenthesized_superclass.msr
test/limit/: stack_overflow.msr
test/logical_operator/: and_truth.msr  or_truth.msr
test/method/: extra_arguments.msr  missing_arguments.msr  not_found.msr  refer_to_name.msr  too_many_arguments.msr  too_many_parameters.msr
test/number/: literals.msr  nan_equality.msr
test/operator/: add_bool_nil.msr  add_bool_num.msr  add_nil_nil.msr  add_num_nil.msr  divide.msr  divide_nonnum_num.msr  divide_num_nonnum.msr  equals.msr  equals_class.msr  greater_nonnum_num.msr  greater_num_nonnum.msr  greater_or_equal_nonnum_num.msr  greater_or_equal_num_nonnum.msr  (+14 more)
win32/: .gitignore  Directory.Build.props.unused  Styles.xaml  generic.xaml  package.xml  packages.config  win32.md  xmoser - Copy.vcxproj  xmoser.sln  xmoser.vcxproj  xmoser.vcxproj.filters
(+340 files in other folders)
